# python-sn2

./: .devcontainer.json  .gitignore  .ruff.toml  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  python-publish.yml  python-test.yml  release.yml
scripts/: release.sh  setup  test-setup
sn2/: __init__.py  constants.py  device.py
tests/: __init__.py  test_device.py
